--- a/docker-compose.vscode-server.yaml
+++ b/docker-compose.vscode-server.yaml
@@ -11,18 +11,6 @@ services:
     # comment out  and uncomment the  block below.
     image: ghcr.io/luca-bachini-barr/vscode-server:latest
 
-    # Build from local Dockerfile (uncomment to enable local build)
-    # build:
-    #   context: ./vscode-server
-    #   dockerfile: Dockerfile
-
-    # Port mappings: intentionally left out so the compose file is
-    # generic. To bind a host port to the container, add a 
-    # section with the format "HOST:CONTAINER". Example:
-    #
-    # ports:
-    #   - "8585:8585"
-
     # Environment variables available inside the container. You can
     # customize these values;  is the container's listening
     # port (not the host port).
@@ -34,10 +22,10 @@ services:
     # Volumes: map host paths into the container. Update host paths as
     # necessary for your environment.
     volumes:
-      - /home/john/docker/appdata/vscode-server/config:/config
-      - /home/john/docker/appdata/vscode-server/data:/home/vscodeuser
+      - ./config:/config
+      - ./data:/home/vscodeuser
       - /var/run/docker.sock:/var/run/docker.sock
-      - /home/john/docker-compose:/docker-compose
+      - ./docker-compose:/docker-compose
 
     # Networking and restart policy
     network_mode: my_bridge
